[package]
name = "eoflint"
version = "0.1.0"
edition = "2021"
description = "A linter to check EOF"
license = "MIT"
readme = "README.md"
repository = "https://github.com/regen100/eoflint"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]
include = ["LICENSE", "src/"]

[dependencies]
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"
colored = "2.0.0"
structopt = "0.3.26"

[dev-dependencies]
