[package]
name = "eoflint"
version = "0.2.0"
edition = "2021"
description = "A linter to check EOF"
license = "MIT"
readme = "README.md"
repository = "https://github.com/regen100/eoflint"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]
include = ["LICENSE", "src/"]

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
colored = "2.0.4"
clap = { version = "4.4.8", features = ["derive"] }

[dev-dependencies]
